--- a/Montana Projekt.ipynb
+++ b/Montana Projekt.ipynb
@@ -21,7 +21,7 @@
    "id": "3d625ae5",
    "metadata": {},
    "source": [
-    "See: https://github.com/H2605/Montana-Project/blob/main/Exposition.pdf"
+    "See: https://github.com/H2605/Montana-Project/tree/main/Sources"
    ]
   },
   {
