--- a/Montana Projekt.ipynb
+++ b/Montana Projekt.ipynb
@@ -71,11 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp_v1 = pd.read_csv('/Users/huyduc/Downloads/CrazyEgg/Homepage Version 1 - Interact, 5-29-2013/Element list Homepage Version 1 - Interact, 5-29-2013.csv')\n",
-    "hp_v2 = pd.read_csv('/Users/huyduc/Downloads/CrazyEgg/Homepage Version 2 - Connect, 5-29-2013/Element list Homepage Version 2 - Connect, 5-29-2013.csv')\n",
-    "hp_v3 = pd.read_csv('/Users/huyduc/Downloads/CrazyEgg/Homepage Version 3 - Learn, 5-29-2013/Element list Homepage Version 3 - Learn, 5-29-2013.csv')\n",
-    "hp_v4 = pd.read_csv('/Users/huyduc/Downloads/CrazyEgg/Homepage Version 4 - Help, 5-29-2013/Element list Homepage Version 4 - Help, 5-29-2013.csv')\n",
-    "hp_v5 = pd.read_csv('/Users/huyduc/Downloads/CrazyEgg/Homepage Version 5 - Services, 5-29-2013/Element list Homepage Version 5 - Services, 5-29-2013.csv')"
+    "hp_v1 = pd.read_csv('.../Sources/Homepage Version 1 - Interact, 5-29-2013/Element list Homepage Version 1 - Interact, 5-29-2013.csv')\n",
+    "hp_v2 = pd.read_csv('.../Sources/Homepage Version 2 - Connect, 5-29-2013/Element list Homepage Version 2 - Connect, 5-29-2013.csv')\n",
+    "hp_v3 = pd.read_csv('.../Sources/Homepage Version 3 - Learn, 5-29-2013/Element list Homepage Version 3 - Learn, 5-29-2013.csv')\n",
+    "hp_v4 = pd.read_csv('.../Sources/Homepage Version 4 - Help, 5-29-2013/Element list Homepage Version 4 - Help, 5-29-2013.csv')\n",
+    "hp_v5 = pd.read_csv('.../Sources/Homepage Version 5 - Services, 5-29-2013/Element list Homepage Version 5 - Services, 5-29-2013.csv')"
    ]
   },
   {
